<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true">

    <data>

        <variable
            name="viewModel"
            type="com.keeprecipes.android.presentation.addRecipe.AddRecipeViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.addRecipe.AddRecipeFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:title="@string/add_recipe_toolbar_title" />

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/title_text_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:boxBackgroundMode="outline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/title_text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Recipe Title"
                        android:inputType="textMultiLine"
                        android:text="@={viewModel.recipe.title}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/instructions_text_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    app:boxBackgroundMode="outline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_text_input_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/instructions_text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top|start"
                        android:hint="Instructions"
                        android:inputType="textMultiLine"
                        android:lines="10"
                        android:minLines="4"
                        android:scrollbars="vertical"
                        android:text="@={viewModel.recipe.instructions}" />
                </com.google.android.material.textfield.TextInputLayout>

                <!--                <HorizontalScrollView-->
                <!--                    android:id="@+id/categories_scroll_view"-->
                <!--                    android:layout_width="0dp"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_marginStart="16dp"-->
                <!--                    android:layout_marginTop="8dp"-->
                <!--                    android:layout_marginEnd="16dp"-->
                <!--                    app:layout_constraintEnd_toEndOf="parent"-->
                <!--                    app:layout_constraintHorizontal_bias="0.5"-->
                <!--                    app:layout_constraintStart_toStartOf="parent"-->
                <!--                    app:layout_constraintTop_toBottomOf="@+id/instructions_text_input_layout">-->

                <!--                    <com.google.android.material.chip.ChipGroup-->
                <!--                        android:id="@+id/collection_chip_group"-->
                <!--                        android:layout_width="wrap_content"-->
                <!--                        android:layout_height="wrap_content" />-->
                <!--                </HorizontalScrollView>-->

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cusine_text_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    app:boxBackgroundMode="outline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/instructions_text_input_layout">

                    <androidx.appcompat.widget.AppCompatMultiAutoCompleteTextView
                        android:id="@+id/cusine_auto_complete_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:dropDownHeight="wrap_content"
                        android:hint="Cuisine / Collection"
                        android:inputType="textFilter"
                        android:text="@={viewModel.recipe.categories}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/portion_text_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    app:boxBackgroundMode="outline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cusine_text_input_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/portion_text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Portion Size"
                        android:inputType="numberDecimal"
                        android:text="@={viewModel.recipe.portionSize}" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ingredients_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:nestedScrollingEnabled="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/portion_text_input_layout" />

                <Button
                    android:id="@+id/remove_ingredient_button"
                    style="@style/Widget.Material3.Button.TonalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="Remove Ingredient"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ingredients_list_view" />

                <Button
                    android:id="@+id/add_ingredient_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="Add Ingredient"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ingredients_list_view" />

                <Button
                    android:id="@+id/add_photo_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="Add Photo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_ingredient_button" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/photo_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:nestedScrollingEnabled="false"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_photo_button" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>